--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^17.2.0",
     "fs": "^0.0.1-security",
     "inquirer": "^8.2.6",
+    "jsdom": "^26.1.0",
     "path": "^0.12.7",
     "terminal-image": "^3.1.1"
   }
